WIP: fix python test, mpi4py

--- a/.travis.yml
+++ b/.travis.yml
@@ -150,16 +150,15 @@ matrix:
           - g++-6
           - openmpi-bin
           - libopenmpi-dev
-          - python-mpi4py
+          - python3-mpi4py
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3.6
     compiler: gcc-6
 
 before_install:
-  - if [[ "$WITH_DISTRIBUTED" == "mpi" ]]; then ./conf/ci/travis-ci/install-mpi.sh openmpi; ompi_info; fi
   - if [[ "$WITH_PYTHON" == "on" ]]; then pyenv global system 3.6; source ~/virtualenv/python3.6/bin/activate; python$PY --version; fi
-
+  - if [[ ( "$WITH_PYTHON" == "on" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then for p in `python3 -c 'import sys; print("\n".join(sys.path))'`; do echo ===== $p; ls $p | grep mpi4py; done; fi
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
   - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
