--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-osx-gcc WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-osx-gcc
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
     compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
@@ -25,7 +26,8 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-osx-gcc WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-osx-gcc
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
     compiler: gcc-6
 
 ## test clang9 - single node/rank with threading backend ##
@@ -34,7 +36,8 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=cthread-osx-clang WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-osx-clang
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
     compiler: clang
 
 ## test clang9 - mpi with threading backend ##
@@ -43,7 +46,8 @@ matrix:
     osx_image: xcode9.2
     env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=mpi-osx-clang WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-osx-clang
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
     compiler: clang
 
 ######################### LINUX #########################
@@ -61,7 +65,8 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-linux-gcc WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-linux-gcc
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
     compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
@@ -78,7 +83,8 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-linux-gcc WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-linux-gcc
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
     compiler: gcc-6
 
 ## test clang4 - single node/rank with threading backend ##
@@ -97,7 +103,8 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=cthread-linux-clang WITH_DISTRIBUTED=serial
+      - BUILD_NAME=cthread-linux-clang
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
     compiler: clang-4.0
 
 ## test clang4 - mpi with threading backend ##
@@ -116,7 +123,8 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=mpi-linux-clang WITH_DISTRIBUTED=mpi
+      - BUILD_NAME=mpi-linux-clang
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
     compiler: clang-4.0
 
 ## test python: gcc6 - single node ##
@@ -134,7 +142,8 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-linux-gcc-py WITH_DISTRIBUTED=serial WITH_PYTHON=on PY=3.6
+      - BUILD_NAME=cthread-linux-gcc-py
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3.6
     compiler: gcc-6
 
 ## test python: gcc6 - mpi ##
@@ -152,11 +161,12 @@ matrix:
           - libopenmpi-dev
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-linux-gcc-py WITH_DISTRIBUTED=mpi WITH_PYTHON=on PY=3.6
+      - BUILD_NAME=mpi-linux-gcc-py
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3.6
     compiler: gcc-6
 
 before_install:
-  - if [[ "$WITH_PYTHON" == "on" ]]; then source ~/virtualenv/python3.6/bin/activate; python$PY --version; fi
+  - if [[ "$WITH_PYTHON" == "true" ]]; then source ~/virtualenv/python3.6/bin/activate; python$PY --version; fi
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
@@ -164,8 +174,8 @@ before_script:
   - eval "${MATRIX_EVAL}"
 
 install:
-  - if [[ "$WITH_PYTHON" == "on" ]]; then pip install --upgrade pip; fi
-  - if [[ ( "$WITH_PYTHON" == "on" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then pip install mpi4py; fi
+  - if [[ "$WITH_PYTHON" == "true" ]]; then pip install --upgrade pip; fi
+  - if [[ ( "$WITH_PYTHON" == "true" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then pip install mpi4py; fi
 
 script: source ./scripts/travis/build.sh
 
