--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ matrix:
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=cthread-osx-gcc-py
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=true
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3.6
     compiler: gcc-6
 
 ## test python: gcc6 - mpi ##
@@ -69,7 +69,7 @@ matrix:
     env:
       - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
       - BUILD_NAME=mpi-osx-gcc-py
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true, PY=3.6
     compiler: gcc-6
 
 ######################### LINUX #########################
@@ -194,7 +194,7 @@ before_install:
     fi
   - |
     if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_PYTHON" == "true" ) ]]; then
-      brew update
+      #brew update
       #brew install openssl readline
       #brew outdated pyenv || brew upgrade pyenv
       #brew install pyenv-virtualenv
@@ -203,8 +203,9 @@ before_install:
       #export PATH="/Users/travis/.pyenv/shims:${PATH}"
       #pyenv-virtualenv venv
       #source venv/bin/activate
-      brew install python$PY
-      python --version
+      #brew install python$PY
+      brew upgrade python
+      python$PY --version
     fi
 
 install:
