--- a/.travis.yml
+++ b/.travis.yml
@@ -202,18 +202,18 @@ before_install:
     fi
 
 install:
-  - if [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) ]]; then pip install --upgrade pip; fi
+  - if [[ "$WITH_PYTHON" == "true" ]]; then pip install --upgrade pip; fi
   - |
     if [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then
       pip install mpi4py;
     fi
+  - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
   - |
     if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_PYTHON" == "true" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then
       pip$PY install mpi4py;
     fi
 
 before_script:
-  - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
   - eval "${MATRIX_EVAL}"
 
 script: source ./scripts/travis/build.sh
