--- a/.travis.yml
+++ b/.travis.yml
@@ -11,47 +11,7 @@ matrix:
   include:
 ########################## OS X #########################
 ## test gcc6 - single node/rank with threading backend ##
-  - name: "osx, gcc, serial"
-    os: osx
-    osx_image: xcode9.2
-    env:
-      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-osx-gcc
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
-    compiler: gcc-6
-
-## test gcc6 - mpi with threading backend ##
-  - name: "osx, gcc, mpi"
-    os: osx
-    osx_image: xcode9.2
-    env:
-      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-osx-gcc
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
-    compiler: gcc-6
-
-## test clang9 - single node/rank with threading backend ##
-  - name: "osx, apple clang, serial"
-    os: osx
-    osx_image: xcode9.2
-    env:
-      - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=cthread-osx-clang
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
-    compiler: clang
-
-## test clang9 - mpi with threading backend ##
-  - name: "osx, apple clang, mpi"
-    os: osx
-    osx_image: xcode9.2
-    env:
-      - MATRIX_EVAL="CC=clang && CXX=clang++"
-      - BUILD_NAME=mpi-osx-clang
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
-    compiler: clang
-
-## test python: gcc6 - single node ##
-  - name: "py, osx, gcc, serial"
+  - name: "osx, gcc, serial, py"
     os: osx
     osx_image: xcode9.2
     python: 3.6
@@ -61,8 +21,8 @@ matrix:
       - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3
     compiler: gcc-6
 
-## test python: gcc6 - mpi ##
-  - name: "py, osx, gcc, mpi"
+## test gcc6 - mpi with threading backend ##
+  - name: "osx, gcc, mpi, py"
     os: osx
     osx_image: xcode9.2
     python: 3.6
@@ -72,85 +32,31 @@ matrix:
       - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3
     compiler: gcc-6
 
+## test clang9 - single node/rank with threading backend ##
+  - name: "osx, apple clang, serial, py"
+    os: osx
+    osx_image: xcode9.2
+    python: 3.6
+    env:
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - BUILD_NAME=cthread-osx-clang-py
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3
+    compiler: clang
+
+## test clang9 - mpi with threading backend ##
+  - name: "osx, apple clang, mpi, py"
+    os: osx
+    osx_image: xcode9.2
+    python: 3.6
+    env:
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - BUILD_NAME=mpi-osx-clang
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3
+    compiler: clang
+
 ######################### LINUX #########################
 ## test gcc6 - single node/rank with threading backend ##
-  - name: "linux, gcc, serial"
-    os: linux
-    dist: trusty
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-6
-          - openmpi-bin
-          - libopenmpi-dev
-    env:
-      - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=cthread-linux-gcc
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
-    compiler: gcc-6
-
-## test gcc6 - mpi with threading backend ##
-  - name: "linux, gcc, mpi"
-    os: linux
-    dist: trusty
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-6
-          - openmpi-bin
-          - libopenmpi-dev
-    env:
-      - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      - BUILD_NAME=mpi-linux-gcc
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
-    compiler: gcc-6
-
-## test clang4 - single node/rank with threading backend ##
-  - name: "linux, clang, serial"
-    os: linux
-    dist: trusty
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-4.0
-        packages:
-          - clang-4.0
-          - g++-6
-          - openmpi-bin
-          - libopenmpi-dev
-    env:
-      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=cthread-linux-clang
-      - WITH_DISTRIBUTED=serial WITH_PYTHON=false
-    compiler: clang-4.0
-
-## test clang4 - mpi with threading backend ##
-  - name: "linux, clang, mpi"
-    os: linux
-    dist: trusty
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-4.0
-        packages:
-          - clang-4.0
-          - g++-6
-          - openmpi-bin
-          - libopenmpi-dev
-    env:
-      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-      - BUILD_NAME=mpi-linux-clang
-      - WITH_DISTRIBUTED=mpi WITH_PYTHON=false
-    compiler: clang-4.0
-
-## test python: gcc6 - single node ##
-  - name: "py, linux, gcc, serial"
+  - name: "linux, gcc, serial, py"
     os: linux
     dist: trusty
     python: 3.6
@@ -168,8 +74,8 @@ matrix:
       - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3.6
     compiler: gcc-6
 
-## test python: gcc6 - mpi ##
-  - name: "py, linux, gcc, mpi"
+## test gcc6 - mpi with threading backend ##
+  - name: "linux, gcc, mpi, py"
     os: linux
     dist: trusty
     python: 3.6
@@ -187,30 +93,73 @@ matrix:
       - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3.6
     compiler: gcc-6
 
+## test clang4 - single node/rank with threading backend ##
+  - name: "linux, clang, serial, py"
+    os: linux
+    dist: trusty
+    python: 3.6
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - BUILD_NAME=cthread-linux-clang-py
+      - WITH_DISTRIBUTED=serial WITH_PYTHON=true PY=3.6
+    compiler: clang-4.0
+
+## test clang4 - mpi with threading backend ##
+  - name: "linux, clang, mpi, py"
+    os: linux
+    dist: trusty
+    python: 3.6
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - BUILD_NAME=mpi-linux-clang-py
+      - WITH_DISTRIBUTED=mpi WITH_PYTHON=true PY=3.6
+    compiler: clang-4.0
+
 before_install:
-  - |
-    if [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) ]]; then
-      source ~/virtualenv/python3.6/bin/activate; python$PY --version;
-    fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
   - |
-    if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_PYTHON" == "true" ) ]]; then
-      brew unlink python
-      brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
-      brew switch python 3.6.5
-      python$PY --version
+    if [[ "$WITH_PYTHON" == "true" ]]; then
+      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        source ~/virtualenv/python3.6/bin/activate;
+      elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        brew unlink python
+        brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
+        brew switch python 3.6.5
+      fi
     fi
 
 install:
   - if [[ "$WITH_PYTHON" == "true" ]]; then pip install --upgrade pip; fi
   - |
-    if [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then
-      pip install mpi4py;
-    fi
-  - if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then brew install open-mpi; fi
-  - |
-    if [[ ( "$TRAVIS_OS_NAME" == "osx" ) && ( "$WITH_PYTHON" == "true" ) && ( "$WITH_DISTRIBUTED" == "mpi" ) ]]; then
-      pip$PY install mpi4py;
+    if [["$WITH_DISTRIBUTED" == "mpi" ]]; then
+      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        brew install open-mpi;
+        if [[ $WITH_PYTHON" == "true" ]]; then
+          pip$PY install mpi4py;
+        fi
+      elif [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) ]]; then
+        pip install mpi4py;
+      fi
     fi
 
 before_script:
