--- a/.travis.yml
+++ b/.travis.yml
@@ -150,7 +150,7 @@ before_install:
 
 install:
 #  - if [[ "$WITH_PYTHON" == "true" ]]; then pip install --upgrade pip; fi
-  - if [[ "$WITH_PYTHON" == "true" ]]; then pip3 install --user --upgrade pip; fi
+  - if [[ "$WITH_PYTHON" == "true" ]]; then curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py; python$PY get-pip.py; pip --version; fi
   - |
     if [[ "$WITH_DISTRIBUTED" == "mpi" ]]; then
       if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
