--- a/.travis.yml
+++ b/.travis.yml
@@ -143,9 +143,8 @@ before_install:
   - |
     if [[ "$WITH_PYTHON" == "true" ]]; then
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-#        source ~/virtualenv/python3.6/bin/activate
          python3.6 -m venv myenv
-         . myenv/bin/activate
+         source myenv/bin/activate
       elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew unlink python
         brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
