--- a/.travis.yml
+++ b/.travis.yml
@@ -143,11 +143,7 @@ before_install:
   - |
     if [[ "$WITH_PYTHON" == "true" ]]; then
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-         brew install pyenv-virtualenv
-         pyenv virtualenv -p python3.6 3.6.6 py36
-         pyenv shell py36
-         python3.6 -m venv venv
-         source ./venv/bin/activate
+        source ~/virtualenv/python3.6/bin/activate;
       elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew unlink python
         brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
