--- a/.travis.yml
+++ b/.travis.yml
@@ -142,14 +142,9 @@ before_install:
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         source ~/virtualenv/python3.6/bin/activate;
       elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        brew install pyenv-virtualenv
-        pyenv virtualenv -p python3.6 3.6.6 py36
-        pyenv shell py36
-        python3.6 -m venv venv
-        source ./venv/bin/activate
-        #brew unlink python
-        #brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
-        #brew switch python 3.6.5
+        brew unlink python
+        brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
+        brew switch python 3.6.5
       fi
     fi
 
