--- a/.travis.yml
+++ b/.travis.yml
@@ -140,7 +140,7 @@ before_install:
   - |
     if [[ "$WITH_PYTHON" == "true" ]]; then
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        source ~/virtualenv/python3.6/bin/activate;
+        source ~/virtualenv/python3.6/bin/activate
       elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew unlink python
         brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/e128fa1bce3377de32cbf11bd8e46f7334dfd7a6/Formula/python.rb
@@ -149,16 +149,21 @@ before_install:
     fi
 
 install:
-  - if [[ "$WITH_PYTHON" == "true" ]]; then curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py; python$PY get-pip.py; pip --version; fi
+  - |
+    if [[ "$WITH_PYTHON" == "true" ]]; then
+      curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+      python$PY get-pip.py
+      pip --version
+    fi
   - |
     if [[ "$WITH_DISTRIBUTED" == "mpi" ]]; then
       if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew install open-mpi;
         if [[ "$WITH_PYTHON" == "true" ]]; then
-          pip$PY install mpi4py;
+          pip$PY install mpi4py
         fi
       elif [[ ( "$TRAVIS_OS_NAME" == "linux" ) && ( "$WITH_PYTHON" == "true" ) ]]; then
-        pip$PY install mpi4py;
+        pip$PY install mpi4py
       fi
     fi
 
