--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 # GCC          6.4.0
 # Clang        4.0
 # Apple Clang  900.0.39.2
+# Python       3.6
 #######################################################
 
 language: cpp
