--- a/arbor/meson.build
+++ b/arbor/meson.build
@@ -50,6 +50,7 @@ arb_src = [
 subdir('include/arbor')
 
 arb = library('arbor',
-              sources: [arb_src, arb_mechs],
-              include_directories: [inc_arbpublic, inc_arbprivate])
+              sources: [arb_src, arb_mechs, mech_catalogue],
+              include_directories: [inc_arbpublic, inc_arbprivate],
+              dependencies : dep_threads)
 
