fix mech catalogue

--- a/meson.build
+++ b/meson.build
@@ -1,23 +1,29 @@
-project('arbor', 'cpp',
-  version: '0.2.1dev',
-  license: 'BSD')
+mechs = ['pas', 'hh', 'expsyn', 'exp2syn', 'test_kin1', 'test_kinlva', 'test_ca', 'nax', 'kdrmt', 'kamt']
+modcc_flags = ['-t', 'cpu']
 
-with_assertions = get_option('arb_assertions')
+mech_gen = generator(modcc,
+                     output : ['@BASENAME@.hpp', '@BASENAME@_cpu.cpp'],
+                     arguments : ['@INPUT@', '-o', '@BUILD_DIR@/@BASENAME@']+modcc_flags)
 
-inc_tclap = include_directories('ext/tclap/include')
-inc_json  = include_directories('ext/json/single_include')
+# Make a list of the mod files packaged with Arbor
+modfiles = []
+foreach m: mechs
+  modfiles += 'mod/'+m+'.mod'
+endforeach
 
-inc_arbprivate = include_directories('arbor')
-inc_arbpublic  = include_directories('arbor/include')
-inc_arbenv     = include_directories('arborenv/include')
-inc_arbsup     = include_directories('sup/include')
+# Generate the header and source files for mechanisms
+arb_mechs = mech_gen.process(modfiles)
 
-dep_threads = dependency('threads')
+# Make the catalog
+# ... todo: we hack the "-I ''" flag, and rely on meson including the path used for the output of mechgen.
+#     should ensure that all of these go in the mechanisms/generated path
+#mech_dir = meson.current_build_dir() + '/generated'
+#default_catalogue_options = ['-A', 'arbor', '-I', mech_dir, '-B', 'multicore']
+default_catalogue_options = ['-A', 'arbor', '-I', '', '-B', 'multicore']
 
-subdir('modcc')
-subdir('mechanisms')
-subdir('arbor')
-subdir('arborenv')
-subdir('sup')
+gen_cat = find_program('generate_default_catalogue')
 
-subdir('example/ring')
+mech_catalogue = custom_target('default_catalogue.cpp',
+                               output: 'default_catalogue.cpp',
+                               command : [gen_cat, default_catalogue_options, mechs, '-o', '@OUTPUT@'])
+
