--- a/mechanisms/meson.build
+++ b/mechanisms/meson.build
@@ -15,12 +15,15 @@ endforeach
 arb_mechs = mech_gen.process(modfiles)
 
 # Make the catalog
-mech_dir = meson.current_build_dir() + '/generated'
-default_catalogue_options = ['-A', 'arbor', '-I', mech_dir, '-B', 'multicore']
+# ... todo: we hack the "-I ''" flag, and rely on meson including the path used for the output of mechgen.
+#     should ensure that all of these go in the mechanisms/generated path
+#mech_dir = meson.current_build_dir() + '/generated'
+#default_catalogue_options = ['-A', 'arbor', '-I', mech_dir, '-B', 'multicore']
+default_catalogue_options = ['-A', 'arbor', '-I', '', '-B', 'multicore']
 
 gen_cat = find_program('generate_default_catalogue')
 
 mech_catalogue = custom_target('default_catalogue.cpp',
                                output: 'default_catalogue.cpp',
-                               command : [gen_cat, default_catalogue_options, '-o', '@OUTPUT@'])
+                               command : [gen_cat, default_catalogue_options, mechs, '-o', '@OUTPUT@'])
 
