Python feature addition for identifiers and event_generators/schedules (#723)
Wrapped the following C++ features in Python: 
- Identifiers (`cell_member`) + according tests
- `event_generator` and schedules (`regular_schedule`, `explicit_schedule`, `poisson_schedule`) + according tests

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -18,7 +18,8 @@ add_subdirectory(pybind11)
 add_library(pyarb MODULE
     config.cpp
     context.cpp
-    exception.cpp
+    event_generator.cpp
+    identifiers.cpp
     mpi.cpp
     pyarb.cpp
     strings.cpp
