wrap meter manager and meter report

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(pyarb MODULE
     event_generator.cpp
     identifiers.cpp
     mpi.cpp
+    profiler.cpp
     pyarb.cpp
     recipe.cpp
     schedule.cpp
