Rejig weight and conversions for modcc
Address inconsistencies in unit conversions between
current updates, initialization, ionic currents etc.

Still missing: support for ionic current contributions from
point processes or a check to assert that this is not
permitted.

Fixes issue #798.

* Correct units in comments for ion state iX_ to a current density.
* Remove conversion factor for NMODL current densities [mA/cm²]
  to Arbor current densities [A/m²] from layout weight: from the point
  of view of Arbor, mechanisms now write in units that Arbor uses
  natively.
* Remove weight_ as a magic modcc variable; applying weight_ is now
  performed directly by code generated by printers.
* Change IndexedVariable interface: remove redundant index_name;
  remove 'op'. Whether external data is accumulated or assigned is now a
  property of the corresponding sourceKind.
* Conversion factors for NMODL <-> Arbor are collated in
  printerutils.cpp, determined by the external data sourceKind.
* Permit direct assignment of external data, as opposed to a weighted
  sum. This behaviour will be required for reversal potential handling.
* `current_` and `conducitivity_` get a different sourceKind in point
  mechanisms, allowing us to distinguish current contributions from
  current density contributions (and applying correct unit scaling
  accordingly.)
* Add unit test for correct initialization and scaling of ionic
  currents, together with two corresponding unit test mechanisms.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 set(test_mechanisms
     celsius_test
+    fixed_ica_current
+    linear_ca_conc
     test_cl_valence
     test_ca_read_valence
 )
