--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(test_mechanisms
     celsius_test
     fixed_ica_current
+    point_ica_current
     linear_ca_conc
     test_cl_valence
     test_ca_read_valence
