--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 set(test_mechanisms
     celsius_test
+    fixed_ica_current
+    point_ica_current
+    linear_ca_conc
     test_cl_valence
     test_ca_read_valence
 )
