--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -10,6 +10,8 @@ set(arbor_sources
     communication/dry_run_context.cpp
     benchmark_cell_group.cpp
     builtin_mechanisms.cpp
+    cable_cell.cpp
+    cable_cell_param.cpp
     cell_group_factory.cpp
     common_types_io.cpp
     execution_context.cpp
@@ -22,7 +24,6 @@ set(arbor_sources
     io/locked_ostream.cpp
     io/serialize_hex.cpp
     lif_cell_group.cpp
-    cable_cell.cpp
     mc_cell_group.cpp
     mechcat.cpp
     memory/cuda_wrappers.cpp
