Replace morphology code with new sample-based morphology parsing.

--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -28,9 +28,11 @@ set(arbor_sources
     mechcat.cpp
     memory/cuda_wrappers.cpp
     memory/util.cpp
+    morph/morphology.cpp
+    morph/sample_tree.cpp
+    morph/primitives.cpp
     merge_events.cpp
     simulation.cpp
-    morphology.cpp
     partition_load_balance.cpp
     profile/clock.cpp
     profile/memory_meter.cpp
