add comments and new unit test

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -4,6 +4,7 @@ set(test_mechanisms
     celsius_test
     test_linear_state
     test_linear_init
+    test_linear_init_shuffle
     test0_kin_diff
     test0_kin_conserve
     test1_kin_diff
