--- a/example/single/CMakeLists.txt
+++ b/example/single/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(single-cell EXCLUDE_FROM_ALL single.cpp)
 add_dependencies(examples single-cell)
-target_link_libraries(single-cell PRIVATE arbor arborenv arbor-sup arbor-private-deps arbor-private-headers)
+target_link_libraries(single-cell PRIVATE arbor arborenv arbor-sup)
