--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -7,6 +7,7 @@ set(test_mechanisms
     test_linear_init_shuffle
     test0_kin_diff
     test0_kin_conserve
+    test0_kin_compartment
     test1_kin_diff
     test1_kin_conserve
     fixed_ica_current
