--- a/modcc/meson.build
+++ b/modcc/meson.build
@@ -6,6 +6,7 @@ modcc_src = [ 'astmanip.cpp',
               'functioninliner.cpp',
               'kineticrewriter.cpp',
               'lexer.cpp',
+              'linearrewriter.cpp',
               'modcc.cpp',
               'module.cpp',
               'parser.cpp',
