--- a/cmake/arbor-config.cmake.in
+++ b/cmake/arbor-config.cmake.in
@@ -1,5 +1,7 @@
 include(CMakeFindDependencyMacro)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}")
+
 foreach(dep @arbor_export_dependencies@)
     find_dependency(${dep})
 endforeach()
