--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -9,6 +9,8 @@ set(test_mechanisms
     test0_kin_conserve
     test1_kin_diff
     test1_kin_conserve
+    test0_kin_compartment
+    test1_kin_compartment
     fixed_ica_current
     point_ica_current
     linear_ca_conc
