--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -28,9 +28,14 @@ set(arbor_sources
     mechcat.cpp
     memory/cuda_wrappers.cpp
     memory/util.cpp
+    morph/em_morphology.cpp
+    morph/label_dict.cpp
+    morph/locset.cpp
+    morph/mbranch.cpp
     morph/morphology.cpp
-    morph/sample_tree.cpp
     morph/primitives.cpp
+    morph/region.cpp
+    morph/sample_tree.cpp
     merge_events.cpp
     simulation.cpp
     partition_load_balance.cpp
