--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(pyarb MODULE
     domain_decomposition.cpp
     event_generator.cpp
     identifiers.cpp
+    morphology.cpp
     mpi.cpp
     profiler.cpp
     pyarb.cpp
