--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -11,6 +11,9 @@ set(test_mechanisms
     test1_kin_conserve
     test0_kin_compartment
     test1_kin_compartment
+    test2_kin_diff
+    test3_kin_diff
+    test3_kin_conserve
     fixed_ica_current
     point_ica_current
     linear_ca_conc
