Python feature probes and samples (#872)
Adds

* to `recipe.cpp`: 
`num_probes` and `get_probe` with helper function `cable_probe(kind, id, location)`
* `sample.cpp`: 
`sample` type with attributes `time` and `value`; a `sampler` with `samples()` and `clear()` and helper functions `attach_sampler(sim, dt)` for adding all probes as well as `attach_sampler(sim, dt, probe_id)` for adding one probe
* `morphology.cpp`: 
`location` as `arb::mlocation` with `branch` and `position` 
* corresponding docs and example
* update to new cable cell semantics in c++ validation test

fixes #762

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -22,10 +22,12 @@ add_library(pyarb MODULE
     domain_decomposition.cpp
     event_generator.cpp
     identifiers.cpp
+    morphology.cpp
     mpi.cpp
     profiler.cpp
     pyarb.cpp
     recipe.cpp
+    sampling.cpp
     schedule.cpp
     simulation.cpp
     spikes.cpp
